[gd_scene load_steps=8 format=2]

[ext_resource path="res://materials/diagbox-normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://sounds/fx/denied.ogg" type="AudioStream" id=2]
[ext_resource path="res://materials/ItemDescription-normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/gui/ShopUI.gd" type="Script" id=4]
[ext_resource path="res://sounds/fx/money.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/gui/GTimePanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://materials/theme.tres" type="Theme" id=7]

[node name="BuyMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 11.0
margin_right = -423.0
margin_bottom = -270.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0078
margin_top = 118.8
margin_right = -108.992
margin_bottom = -8.19986
custom_fonts/font = ExtResource( 3 )
text = "Lorem Ipsum Dolor Sit Amet.
Lorem Ipsum Dolor Sit Amet.
Lorem Ipsum Dolor Sit Amet.
Lorem Ipsum Dolor Sit Amet.
Lorem Ipsum Dolor Sit Amet."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="denied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 11.0
margin_right = -5.0
margin_bottom = -85.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 137.0
margin_bottom = 103.0
size_flags_horizontal = 3

[node name="Buy" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "gameBuy"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 137.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 141.0
margin_right = 279.0
margin_bottom = 103.0
size_flags_horizontal = 3

[node name="Sell" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 138.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "gameSell"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 138.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GPanel" parent="." instance=ExtResource( 6 )]
margin_left = 230.306
margin_top = 154.796
margin_right = 288.306
margin_bottom = 187.796

[connection signal="item_activated" from="HBoxContainer/VBoxContainer/BuyList" to="." method="_on_BuyList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/BuyList" to="." method="_on_BuyList_item_selected"]
[connection signal="item_activated" from="HBoxContainer/VBoxContainer2/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer2/ItemList" to="." method="_on_ItemList_item_selected"]
